peanuts user provider